Add list of tasks
